Search by type added and fixed fetching

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>People's List</title>
   </head>
   <body>
+    <input type="search" name="search" id="search" />
+    <select name="type" id="type">
+      <optgroup label="Type">
+        <option value="id">ID</option>
+        <option value="firstName">First Name</option>
+        <option value="lastName">Last Name</option>
+        <option value="capsule">Capsule</option>
+        <option value="age">Age</option>
+        <option value="city">City</option>
+        <option value="gender">Gender</option>
+        <option value="hobby">Hobby</option>
+      </optgroup>
+    </select>
     <div class="table-container"></div>
     <script src="./script.js"></script>
   </body>
