--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="media.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/media.css" />
     <title>People's List</title>
   </head>
   <body>
@@ -43,6 +43,6 @@
       </select>
     </div>
     <div class="table-container"></div>
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
