--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/media.css" />
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon" />
     <title>People's List</title>
   </head>
   <body>
